[project]
name = "airplane_simple_retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "parsa", email = "parsa.miraghaie@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "pyapp[local-langchain]",
]

[project.scripts]
generate = "airplane_simple_retriever.main:generate"
inference = "airplane_simple_retriever.main:inference"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = ["ipykernel>=6.29.5"]

[tool.uv.sources]
pyapp = { git = "https://github.com/Parsa-Mir/app.git", subdirectory = "pyapp" }
