[project]
name = "airplane_simple_retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "parsa", email = "parsa.miraghaie@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["langgraph>=0.4.3", "pyapp[local-langchain]"]

# [project.scripts]
# generate = "airplane_simple_retriever.generate:generate"
# inference = "airplane_simple_retriever.main:inference"
# graph = "airplane_simple_retriever.main:get_graph"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = ["ipykernel>=6.29.5", "pyppeteer>=2.0.0"]

[tool.uv.sources]
pyapp = { git = "https://github.com/Parsa-Mir/app.git", subdirectory = "pyapp" }
